# loan-prediction-mlops

./: .env.example  Dockerfile  config.yaml  loan_pipeline.yaml  pyproject.toml
.dvc/: config
data/: raw.dvc
data/processed/: test.csv.dvc  train.csv.dvc
data/raw/: .gitignore  loan_dataset.csv  loan_dataset.csv.dvc
pipelines/: pipeline.py
pipelines/components/: evaluate.py  ingest.py  preprocess.py  train.py
src/: evaluate.py  preprocess.py  train.py
src/api/: app.py  schemas.py
